# Dont-Eat-Spell-Tomes

./: Build.cmd  CMakeLists.txt  DontEatSpellTomes.ppj  LICENSE  README.md  install_files.cmake  vcpkg.json
Data/: .gitattributes  .gitignore  DontEatSpellTomes.esl  DontEatSpellTomes.esp
Data/Fomod/: ModuleConfig.xml  info.xml
Data/SkyrimSE/: DontEatSpellTomes.esp
Data/Source/Scripts/: DEST_AliasExt.psc  DEST_FormExt.psc  DEST_PlayerSpellLearningScript.psc  DEST_ReferenceAliasExt.psc
cmake/: Plugin.h.in  Version.h.in  headerlist.cmake  sourcelist.cmake
data/Fomod/: ModuleConfig.xml  info.xml
data/SkyrimVR/: DontEatSpellTomes.esp
include/: Offsets.h  Patches.h  Registration.h
include/Papyrus/: AliasExt.h  UIExt.h
scripts/SDK/: DEST_FormExt.psc
src/: ActiveMagicEffectExt.cpp  AliasExt.cpp  DEST.cpp  FormExt.cpp  FormExt.h  Hooks.cpp  Offsets.h  PCH.h  Papyrus.cpp  Papyrus.h  Patches.cpp  ReferenceAliasExt.cpp  ReferenceAliasExt.h  Registration.cpp  Registration.h  Serialization.cpp  Serialization.h  SpellTomeManager.cpp  SpellTomeManager.h  UIExt.cpp  main.cpp
src/Papyrus/: ActiveMagicEffectExt.cpp  ActiveMagicEffectExt.h  AliasExt.cpp  DEST.cpp  DEST.h  FormExt.cpp  UIExt.cpp
